<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.wso2</groupId>
    <artifactId>org.wso2.ppaas.thrift.publisher</artifactId>
    <packaging>jar</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>Thrift Event Publisher</name>
    <url>http://maven.apache.org</url>


    <repositories>
        <repository>
            <id>wso2-nexus</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </repository>
        <repository>
            <id>wso2.releases</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </repository>
        <repository>
            <id>wso2.snapshots</id>
            <name>Apache Snapshot Repository</name>
            <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <inherited>true</inherited>
                <version>${maven.assembly.plugin.version}</version>
                <configuration>
                    <finalName>${distribution.name}-${project.version}</finalName>
                    <descriptor>package.xml</descriptor>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <id>create-archive</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <inherited>false</inherited>

                <configuration>
                    <excludes>
                        <exclude>**/org.wso2.ppaas.test.integration.thrift.publisher/*.java</exclude>
                        <exclude>**/org.wso2.ppaas.test.live.thrift.publisher/*.java</exclude>
                    </excludes>
                </configuration>

                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>integration-test</phase>
                        <configuration>
                            <systemProperties>
                                <property>
                                    <name>distribution.zip</name>
                                    <value>${basedir}/target/${distribution.name}-${project.version}.zip</value>
                                </property>
                            </systemProperties>

                            <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
                            <suiteXmlFiles>
                                <suiteXmlFile>${basedir}/src/test/resources/thrift-event-publisher-testng.xml
                                </suiteXmlFile>
                            </suiteXmlFiles>
                            <workingDirectory>${basedir}/target</workingDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>live</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                        <inherited>false</inherited>

                        <configuration>
                            <excludes>
                                <exclude>**/org.wso2.ppaas.test.integration.thrift.publisher/*.java</exclude>
                                <exclude>**/org.wso2.ppaas.test.live.thrift.publisher/*.java</exclude>
                            </excludes>
                        </configuration>

                        <executions>
                            <execution>
                                <id>integration-test</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>integration-test</phase>

                                <configuration>
                                    <systemProperties>
                                        <property>
                                            <name>distribution.zip</name>
                                            <value>${basedir}/target/${distribution.name}-${project.version}.zip</value>
                                        </property>
                                    </systemProperties>

                                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
                                    <suiteXmlFiles>
                                        <suiteXmlFile>
                                            ${basedir}/src/test/resources/thrift-event-publisher-live-testng.xml
                                        </suiteXmlFile>
                                    </suiteXmlFiles>
                                    <workingDirectory>${basedir}/target</workingDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.apache.ws.commons.axiom.wso2</groupId>
            <artifactId>axiom</artifactId>
            <version>${axiom.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${httpclient.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.wso2</groupId>
            <artifactId>httpcore</artifactId>
            <version>${httpcore.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>net.lingala.zip4j</groupId>
            <artifactId>zip4j</artifactId>
            <version>${zip4j.version}</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>${joda.time.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.analytics-common</groupId>
            <artifactId>org.wso2.carbon.databridge.agent</artifactId>
            <version>${databridge.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.analytics-common</groupId>
            <artifactId>org.wso2.carbon.databridge.commons</artifactId>
            <version>${databridge.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.analytics-common</groupId>
            <artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
            <version>${databridge.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.databind.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.analytics-common</groupId>
            <artifactId>org.wso2.carbon.databridge.core</artifactId>
            <version>${databridge.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.analytics-common</groupId>
            <artifactId>org.wso2.carbon.databridge.receiver.thrift</artifactId>
            <version>${databridge.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <distribution.name>ThriftEventPublisher</distribution.name>
        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
        <maven.compiler.plugin.version>2.3.1</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
        <httpcore.version>4.3.3.wso2v1</httpcore.version>
        <httpclient.version>4.3.1.wso2v2</httpclient.version>
        <gson.version>2.1</gson.version>
        <axiom.version>1.2.11.wso2v6</axiom.version>
        <junit.version>3.8.1</junit.version>
        <testng.version>6.1.1</testng.version>
        <slf4j.version>1.7.0</slf4j.version>
        <log4j.version>1.2.17</log4j.version>
        <zip4j.version>1.3.2</zip4j.version>
        <joda.time.version>2.9.3</joda.time.version>
        <databridge.version>5.0.8</databridge.version>
        <jackson.databind.version>2.5.4</jackson.databind.version>
        <carbon.utils.version>4.4.2</carbon.utils.version>
    </properties>
</project>